--- a/src/app/webphone/webphone.component.css
+++ b/src/app/webphone/webphone.component.css
@@ -44,13 +44,14 @@
     min-height: 300px !important;
     min-width: 192px !important;
     height: auto;
+    text-align: center;
 }
 
 .pad-button {
     width: 100%;
-    height: 24px;
-    font-size: 16px;
-    text-transform: none;
+    height: 36px;
+    font-size: 14px;
+    text-transform: capitalize;
 }
 
 .row {
