--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: cylb;
-    src: url('/mybc/assets/fonts/c&lb.ttf');
+    src: url('/assets/fonts/c&lb.ttf');
 }
 
 .md-toolbar {
