--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,9 @@
 .statusText {
   color: #fff;
 }
+
+.header-img {
+  -webkit-box-shadow: 0px -1px 40px 10px rgba(240,156,130,1);
+  -moz-box-shadow: 0px -1px 40px 10px rgba(240,156,130,1);
+  box-shadow: 0px -1px 40px 10px rgba(240,156,130,1);
+}
