--- a/src/app/webphone/webphone.component.css
+++ b/src/app/webphone/webphone.component.css
@@ -14,6 +14,7 @@
     min-height: 150px !important;
     max-height: 150px !important;
     text-align: center;
+    padding-top: 10px;
 }
 
 .webphone.dialer {
